syntax = "proto3";

package notification;

option go_package = "github.com/2group/2sales.notification-service/pkg/gen/go/notification;notificationv1";

enum Channel {
  CHANNEL_UNSPECIFIED = 0;
  EMAIL               = 1;
  SMS                 = 2;
  WEBSOCKET           = 3;
  WHATSAPP            = 4;
}

enum TargetType {
  TARGET_UNSPECIFIED       = 0;
  ORG_ROLE_EMPLOYEES       = 1;
  ORG_CUSTOMERS            = 2;
  ORG_ALL_EMPLOYEES        = 3;
  USER                     = 4;
  EMPLOYEE                 = 5;
  CUSTOMER                 = 6;
}

service NotificationService {
    rpc CreateNotification(CreateNotificationRequest) returns (CreateNotificationResponse);
}

message OrgRoleEmployees {
  int64 organization_id = 1;
  int64 role_id         = 2;
}

message OrgCustomers {
  int64 organization_id = 1;
}

message OrgAllEmployees {
  int64 organization_id = 1;
}

message UserTarget {
  int64 user_id = 1;
}

message EmployeeTarget {
  int64 employee_id = 1;
}

message CustomerTarget {
  int64 customer_id = 1;
}

message CreateNotificationRequest {
    Notification notification = 1;
}

message CreateNotificationResponse {
}

message Notification {
  string template_type = 1;
  map<string,string> template_data = 2;

  oneof target {
    OrgRoleEmployees org_role_employees = 10;
    OrgCustomers org_customers = 11;
    OrgAllEmployees org_all_employees = 12;
    UserTarget user = 13;
    EmployeeTarget employee = 14;
    CustomerTarget customer = 15;
  }

  repeated Channel channels = 20;
}